--- a/package.json
+++ b/package.json
@@ -29,12 +29,23 @@
   "author": "Guillaume Brioudes (https://myllaume.fr/)",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@electron-forge/cli": "^6.0.5",
     "@electron-forge/maker-deb": "^6.0.5",
     "@electron-forge/maker-dmg": "^6.0.5",
     "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.5",
-    "electron": "^21.4.2"
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "electron": "^21.4.2",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.76.2",
+    "webpack-dev-server": "^4.13.0",
+    "yaml-loader": "^0.8.0"
   },
   "dependencies": {
     "@electron-forge/publisher-github": "^6.0.4",
@@ -51,6 +62,8 @@
     "markdown-it-attrs": "^4.1.4",
     "moment": "^2.29.1",
     "nunjucks": "^3.2.3",
+    "preact": "^10.13.1",
+    "preact-router": "^4.1.0",
     "slugify": "^1.6.5",
     "yaml-front-matter": "^4.1.1"
   }
